# MediLinkBot

MediLinkBot/: .env.example  .gitignore  SECURITY.md  app.py  pyproject.toml  replit.md  requirements.txt  start_ngrok.py  start_simple.py  start_with_ngrok.py  test_sms.py  test_ussd.py  test_ussd_simple.py
MediLinkBot/data/: alerts.json  diseases.csv  doctors.csv  medications.csv
MediLinkBot/static/css/: style.css
MediLinkBot/static/js/: script.js
MediLinkBot/templates/: alerts.html  book.html  booking_detail.html  bookings.html  chat.html  facilities.html  history.html  home.html  index.html  login.html  profile.html  results.html  signup.html  specialist.html  summary.html  symptoms.html
