[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-wtf>=1.2.0",
    "flask-limiter>=3.5.0",
    "python-dotenv>=1.0.0",
    "werkzeug>=3.0.0",
    "Flask-SQLAlchemy>=3.0.0",
    "Flask-Login>=0.6.3",
    "google-generativeai>=0.1.0",
    "africastalking>=3.0.0",
    "requests>=2.31.0",
]
